[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
sems_core = { path = "crates/sems_core" }

axum = "0.8"
anyhow = "1"
clap = "4"
hyper = "1.7"
tokio = "1.48"
tower = "0.4"
tower-http = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1.18"
thiserror = "1.0"
