[package]
name = "electra-sems"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48" , features = ["full"]}
axum = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
